[tool.poetry]
name = "poeticthesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "3.8.7"
numpy = "1.19.5"
OpenEXR = "^1.3.2"
opencv-python = "^4.5.1"
scikit-image = "^0.18.1"
tensorflow-gpu = "^2.4.1"

[tool.poetry.dev-dependencies]
matplotlib = "^3.4.0"
pylint = "^2.7.2"
pycairo = "^1.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
